<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/sort_by_name_button"
        android:title="@string/menu_sort_by_name" />
    <item
        android:id="@+id/sort_by_year"
        android:title="@string/menu_sort_by_year" />
    <item
        android:id="@+id/sort_by_dose_button"
        android:title="@string/menu_sort_by_dose" />
    <item
        android:id="@+id/show_only_obligatory_button"
        android:title="@string/menu_only_obligatory" />
    <item
        android:id="@+id/show_only_optional_button"
        android:title="@string/menu_only_optional" />
</menu>